--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <a href="about.html">Go to about page</a>
+    <h1>Lillieanna</h1>
     <h1>CSS Basics</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam at officia nisi nulla magnam quo ipsam labore illum officiis explicabo in deleniti praesentium reprehenderit dolor debitis, voluptatibus, voluptates quod nostrum?</p>
