--- a/index.html
+++ b/index.html
@@ -8,19 +8,24 @@
 </head>
 <body>
     <a href="about.html">Go to about page</a>
-    <h1>Lillieanna</h1>
-    <h1>CSS Basics</h1>
+    <h2>Inline elements</h2>
+    <em>em tag</em>
+    <a href=""">anchor tag</a>
+    <span>span tag</span>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam at officia nisi nulla magnam quo ipsam labore illum officiis explicabo in deleniti praesentium reprehenderit dolor debitis, voluptatibus, voluptates quod nostrum?</p>
 
-    <div>
-        <h2>Ninjas available for hire</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente inventore quod harum? Quia mollitia, corrupti fugiat blanditiis qui hic obcaecati necessitatibus! Veritatis eveniet dignissimos in sed commodi delectus quidem temporibus?</p>
+        <h2>Block-leve; elements</h2>
+
+        <div>div tag</div>
+        <div>another div tag</div>
+        <h3>h3 tag</h3>
+        <p>paragrafh tag</p>
         <ul>
-            <li>Ninja Yoshi</li>
-            <li>Ninja Mario</li>
-            <li>Ninja Shaun</li>
-        </ul>
-    </div>
+         <li>li tag</li>
+            <li>another li tag</li>
+         
+         </ul>
+          
+
 </body>
 </html>
